# projeto_padrao

./: .gitignore  pyproject.toml
