[tool.poetry]
name = "projeto-padrao"
version = "0.1.0"
description = ""
authors = ["DeyvedSilva <deyved.silva@blueshift.com.br>"]
readme = "README.md"
packages = [{include = "projeto_padrao"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
